RESOLVED FIXED293412
[GTK] GTK3 build fixes due to missing guard and headers
https://bugs.webkit.org/show_bug.cgi?id=293412
Summary [GTK] GTK3 build fixes due to missing guard and headers
Lauro Moura
Reported 2025-05-21 20:51:00 PDT
This is a small initial patch fixing the GTK3 build. Other failures are related to 295196@main and might require a larger patch.
Attachments
Lauro Moura
Comment 1 2025-05-21 21:00:26 PDT
Lauro Moura
Comment 2 2025-05-21 21:03:49 PDT
Opened bug293413 for the other build failures related to removal of some methods from DOMSelection.
EWS
Comment 3 2025-05-23 09:00:25 PDT
Committed 295341@main (150fa103a89e): <https://commits.webkit.org/295341@main> Reviewed commits have been landed. Closing PR #45754 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.