[GTK] GTK3 build fixes due to missing guard and headers https://bugs.webkit.org/show_bug.cgi?id=293412

Reviewed by Adrian Perez de Castro.

294087@main added a new WebCore generated file GetComposedRangesOptions
that's used by DOMSelection which in turn is used by the GTK InjectedBundle
code in Source/WebKit.

And 293942@main added a new WebDriver class that used the 2022 API
WebKitNetworkSession but was missing the proper guard.

While this commit makes the GTK3 build past these errors, there are a
few more build failures related to 295196@main removing some fields from
DOMSelection that are used by the old WebKitDOMDOMSelection class. These
can be fixed in a follow-up commit.

* Source/WebCore/Headers.cmake: Add new GetComposedRangesOption header.
* Source/WebKit/UIProcess/Automation/glib/BidiBrowserAgentGlib.cpp:
  Guard WebKitNetworkSession with proper 2022 API check.

Canonical link: https://commits.webkit.org/295341@main